--- a/index.html
+++ b/index.html
@@ -23,10 +23,93 @@
 
 <body>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
-  <script src="assets/js/app.js"></script>
+  <div id="container">
 
+
+    <header>
+
+
+      <div class="bovenbalk">
+        <div class="menulinks">
+          <div class="menulinks">taal:</div>
+          <select class="menulinks" name="cars" id="cars">
+            <option value="volvo">nederlands</option>
+            <option value="saab">english</option>
+            <option value="mercedes">spanish</option>
+            <option value="audi">france</option>
+          </select>>
+        </div>
+<div class="menurechts">
+  <div class="menurechts"><a href="">mijn account</a></div>
+  <div class="menurechts">|</div>
+  <div class="menurechts"><a href="">afrekenen</a></div>
+  <div class="menurechts">|</div>
+  <div class="menurechts"><a href="">uitloggen</a></div>
+
+</div>
+      </div>
+      
+      <div class="onderbalk">onderbalk</div>
+
+
+
+
+
+
+    </header>
+
+    <main>
+
+
+      <div id="filter">filter voor de pr</div>
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+      products<br />
+    </main>
+
+    <footer> footer </footer>
+
+    <script src="assets/js/app.js"></script>
+
+  </div>
 </body>
 
 </html>
