--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 </head>
 
 <body>
+  
 
   <div id="container">
 
@@ -39,18 +40,28 @@
             <option value="audi">france</option>
           </select>>
         </div>
-<div class="menurechts">
-  <div class="menurechts"><a href="">mijn account</a></div>
-  <div class="menurechts">|</div>
-  <div class="menurechts"><a href="">afrekenen</a></div>
-  <div class="menurechts">|</div>
-  <div class="menurechts"><a href="">uitloggen</a></div>
+        <div class="menurechts">
+          <div class="menurechts"><a href="">mijn account</a></div>
+          <div class="menurechts">|</div>
+          <div class="menurechts"><a href="">afrekenen</a></div>
+          <div class="menurechts">|</div>
+          <div class="menurechts"><a href="">uitloggen</a></div>
+
+        </div>
+      </div>
+
+      <div class="onderbalk">
+<div class="menulinks1">
 
 </div>
+        <div class="menurechts1">
+          <div class="menurechts1">search</div>
+          <div class="menurechts1">vergelijk</div>
+          <a href="index2.html"> 
+          <img src="happy.svg" alt="menurechts1" />
+        </a>
+        </div>
       </div>
-      
-      <div class="onderbalk">onderbalk</div>
-
 
 
 
@@ -62,47 +73,11 @@
 
 
       <div id="filter">filter voor de pr</div>
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
-      products<br />
+      <div class="products">
+<div class="product">
+  <img src="assets/img/vetementshood.png" alt="product" />
+</div>
+      </div>
     </main>
 
     <footer> footer </footer>
