--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
 <body>
   
+  
 
   <div id="container">
 
@@ -76,8 +77,33 @@
       <div class="products">
 <div class="product">
   <img src="assets/img/vetementshood.png" alt="product" />
+  <div class="onderp1">
+<div class="onderlinksp1">
+<div class="productnaam1">vmnts hoodie</div>
+<div class="productprijs1">199,99$</div>
+
 </div>
-      </div>
+<div class="onderrechtsp1">
+  <img src="add.svg" alt="onderrechtsp1" />
+</div>
+</div>
+  </div>
+
+  <div class="product">
+    <img src="assets/img/vetementshood.png" alt="product" />
+    <div class="onderp1">
+  <div class="onderlinksp1">
+  <div class="productnaam1">vmnts hoodie</div>
+  <div class="productprijs1">199,99$</div>
+  
+  </div>
+  <div class="onderrechtsp1">
+    <img src="add.svg" alt="onderrechtsp1" />
+  </div>
+  </div>
+    </div>
+</div>
+      
     </main>
 
     <footer> footer </footer>
