--- a/index.html
+++ b/index.html
@@ -22,15 +22,13 @@
 </head>
 
 <body>
-  
-  
+
+
 
   <div id="container">
 
-
+    <!-- bovenbalk van de header van de site -->
     <header>
-
-
       <div class="bovenbalk">
         <div class="menulinks">
           <div class="menulinks">taal:</div>
@@ -44,69 +42,169 @@
         <div class="menurechts">
           <div class="menurechts"><a href="">mijn account</a></div>
           <div class="menurechts">|</div>
-          <div class="menurechts"><a href="">afrekenen</a></div>
+          <div class="menurechts"><a href="index2.html">afrekenen</a></div>
           <div class="menurechts">|</div>
           <div class="menurechts"><a href="">uitloggen</a></div>
 
         </div>
       </div>
-
+      <!-- onderbalk van de header van de site -->
       <div class="onderbalk">
-<div class="menulinks1">
-
-</div>
+        <div class="menulinks1">
+          <img src="logo.svg" alt="menulinks1" />
+        </div>
         <div class="menurechts1">
-          <div class="menurechts1">search</div>
+          <div class="menurechts1" >search</div>
           <div class="menurechts1">vergelijk</div>
-          <a href="index2.html"> 
-          <img src="happy.svg" alt="menurechts1" />
-        </a>
+          <a href="index2.html">
+            <img src="happy.svg" alt="menurechts1" />
+          </a>
         </div>
       </div>
-
-
-
-
-
     </header>
-
     <main>
 
-
-      <div id="filter">filter voor de pr</div>
-      <div class="products">
-<div class="product">
-  <img src="assets/img/vetementshood.png" alt="product" />
-  <div class="onderp1">
-<div class="onderlinksp1">
-<div class="productnaam1">vmnts hoodie</div>
-<div class="productprijs1">199,99$</div>
-
-</div>
-<div class="onderrechtsp1">
-  <img src="add.svg" alt="onderrechtsp1" />
-</div>
-</div>
-  </div>
-
-  <div class="product">
-    <img src="assets/img/vetementshood.png" alt="product" />
-    <div class="onderp1">
-  <div class="onderlinksp1">
-  <div class="productnaam1">vmnts hoodie</div>
-  <div class="productprijs1">199,99$</div>
-  
-  </div>
-  <div class="onderrechtsp1">
-    <img src="add.svg" alt="onderrechtsp1" />
-  </div>
-  </div>
-    </div>
-</div>
+      <!-- site filters-->
+      <div id="filter">
       
-    </main>
+      </div>
 
-    <footer> footer </footer>
+      <!-- producten/verkoopitems van de site-->
+      <div class="products">
+        <div class="product">
+          <img src="assets/img/vetementshood.png" alt="product" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">vmnts hoodie</div>
+              <div class="productprijs1">199,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/erdh1.png" alt="product1" class="product1" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">ERD navy hoodie</div>
+              <div class="productprijs1">499,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/alyxbuckelhood.webp" alt="product2" class="product2" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">1017 ALYX 9sm buckel hoodie</div>
+              <div class="productprijs1">199,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+
+        <div class="product">
+          <img src="assets/img/maythebridges.webp" alt="product1" class="product3" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">vtmns bridges hoodie</div>
+              <div class="productprijs1">1.499,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+
+        <div class="product">
+          <img src="assets/img/0729-1_a45d4cf2-2aa6-4808-8ac5-6aecd282adac_1800x.webp" alt="product1" class="product4" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">nofaithstudios zip-up</div>
+              <div class="productprijs1">399,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+
+        <div class="product">
+          <img src="assets/img/Schermafbeelding 2025-02-17 134028.png" alt="product1" class="product5" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">balenciaga tape hoodie</div>
+              <div class="productprijs1">699,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/rickowensramstein.webp" alt="product1" class="product6" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">vtmns Ramstein hoodie</div>
+              <div class="productprijs1">599,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/vetementsgunclubhood.jpg" alt="product1" class="product7" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">vtmns gun club hoodie</div>
+              <div class="productprijs1">899,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/1070fadedhoodie.webp" alt="product1" class="product8" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">balenciaga 1070 faded hoodie</div>
+              <div class="productprijs1">749,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+
+
+
+      </div>
+    </main>
+    <!-- footer/copyright en info site-->
+    <footer> 
+      <div class="footerboven">
+
+      </div>
+    <div class="footeronder">
+      webshop door Sebastiaan Kuper
+    </div>
+    </footer>
 
     <script src="assets/js/app.js"></script>
 
