--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
       <!-- onderbalk van de header van de site -->
       <div class="onderbalk">
         <div class="menulinks1">
-          <img src="assets/img/mainlogo.png"alt="menulinks1" class="logomeneuboven" />
+          <img src="assets/img/pngtree-online-shopping-logo-desing-png-image_6540923 - kopie.png" alt="menulinks1" class="logomeneuboven" />
         </div>
         <div class="menurechts1">
           <div class="wrap">
             <div class="search">
-               <input type="text" class="searchTerm" placeholder="What are you looking for?">
-               <button type="submit" class="searchButton">
-                 <i class="fa fa-search"></i>
+              <input type="text" class="searchTerm" placeholder="What are you looking for?">
+              <button type="submit" class="searchButton">
+                <i class="fa fa-search"></i>
               </button>
             </div>
-         </div>
+          </div>
           <div class="menurechts1">vergelijk</div>
           <a href="index2.html">
             <img src="happy.svg" alt="menurechts1" />
@@ -74,14 +74,29 @@
 
       <!-- site filters-->
       <div id="filter">
-        <div id="slidebar">
-          <div id="slider">
-            <input type="range" min="1" max="100" value="50">
-          </div>
-        </div>
-
+<div class="categorieëenbox">
+  <div class="catboxboven">
+<div class="cattext"> categorieëen: </div>
+</div>
+<ul class="categorieëenboxtext">
+  <li><a href="">hoodies/zip ups</a></li>
+  <li><a href="">broeken</a></li>
+  <li><a href="">shirts</a></li>
+  <li><a href="">accessoires</a></li>
+</ul>
+</div>
+<div class="categorieëenbox">
+  <div class="catboxboven">
+<div class="cattext"> kleuren: </div>
+</div>
+<ul class="categorieëenboxtext">
+  <li><a href="">zwart</a></li>
+  <li><a href="">wit</a></li>
+  <li><a href="">grijs</a></li>
+  <li><a href="">rood</a></li>
+</ul>
       </div>
-
+    </div>
       <!-- producten/verkoopitems van de site-->
       <div class="products">
         <div class="product">
@@ -93,7 +108,7 @@
 
             </div>
             <div class="onderrechtsp1">
-              <img src="add.svg"  onclick="winkelWagenAdd()" alt="onderrechtsp1" />
+              <img src="add.svg" onclick="winkelWagenAdd()" alt="onderrechtsp1" />
             </div>
           </div>
         </div>
@@ -205,9 +220,149 @@
             </div>
           </div>
         </div>
+        <div class="product">
+          <img src="assets/img/erdhoodiegray1webp.webp" alt="product1" class="product9" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">ERD grey hoodie</div>
+              <div class="productprijs1">2.500,99$</div>
 
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" onclick="winkelWagenAdd()" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/vetements_ss16_og.webp" alt="product1" class="product10" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">vtmns sss16 hoodie</div>
+              <div class="productprijs1">1.299,99$</div>
 
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" onclick="winkelWagenAdd()" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/vetementsstripehood.webp" alt="product1" class="product11" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">vetements stripe hoodie</div>
+              <div class="productprijs1">999,99$</div>
 
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" onclick="winkelWagenAdd()" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/rick-fw20-performa.png" alt="product1" class="product12" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">rick owens performa zip</div>
+              <div class="productprijs1">499,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" onclick="winkelWagenAdd()" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/drkshwdroz.webp" alt="product1" class="product13" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">riack owens drkshdw zip</div>
+              <div class="productprijs1">849,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" onclick="winkelWagenAdd()" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/fur-sheepskin.jpg" alt="product1" class="product14" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">rick owens fur sheepkin zip</div>
+              <div class="productprijs1">299,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" onclick="winkelWagenAdd()" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/gimp.webp" alt="product1" class="product15" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">rick owens gimp zip</div>
+              <div class="productprijs1">749,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" onclick="winkelWagenAdd()" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/hustler.webp" alt="product1" class="product16" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">rick owens hustler hoodie</div>
+              <div class="productprijs1">399,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" onclick="winkelWagenAdd()" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/showroomnofaithstudios.jpg" alt="product1" class="product17" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">nofaithstudios showroom hoodie</div>
+              <div class="productprijs1">949,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" onclick="winkelWagenAdd()" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/celine monochromicavif.avif" alt="product1" class="product18" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">celine monochromicavif hoodie</div>
+              <div class="productprijs1">1.299,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" onclick="winkelWagenAdd()" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
+        <div class="product">
+          <img src="assets/img/fear-of-god-essentials.webp" alt="product1" class="product19" />
+          <div class="onderp1">
+            <div class="onderlinksp1">
+              <div class="productnaam1">fear of god essentials hoodie</div>
+              <div class="productprijs1">2.149,99$</div>
+
+            </div>
+            <div class="onderrechtsp1">
+              <img src="add.svg" onclick="winkelWagenAdd()" alt="onderrechtsp1" />
+            </div>
+          </div>
+        </div>
       </div>
     </main>
     <!-- footer/copyright en info site-->
@@ -231,7 +386,7 @@
           <div class="over_ons_boven">
             <div class="over_ons_text"> klantenservice:</div>
           </div>
-          <div class="over_ons_onder"> 
+          <div class="over_ons_onder">
             <ul class="a">
               <li><a href="">levering</a></li>
               <li><a href="">wachtwoord vergeten</a></li>
@@ -248,12 +403,12 @@
           <div class="over_ons_onder">
             <ul class="a">
               <li><a href="">transport tarieven</a></li>
-              
+
             </ul>
           </div>
         </div>
         <div id="middenstreepfooter">|</div>
-        <img src="assets/img/mainlogo.png">
+        <img src="assets/img/pngtree-online-shopping-logo-desing-png-image_6540923 - kopie.png">
       </div>
       <div class="footeronder">
         webshop door Sebastiaan Kuper
