--- a/index2.html
+++ b/index2.html
@@ -10,6 +10,8 @@
 </head>
 
 <body>
+
+  <main>
   <div class="row">
     <div class="col-75">
       <div class="container">
@@ -33,7 +35,7 @@
 
 
           </div>
-          < 
+           
           <label>
             <input type="checkbox" checked="checked" name="sameadr"> Algemene voorwaarden
           </label>
@@ -45,7 +47,7 @@
     </div>
 
   </div>
-
+</main>
 </body>
 
 </html>
